--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,15 +11,15 @@
     "@types/react": "^18.0.25",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.8",
-    "@types/react-router-dom": "^5.3.2",
     "axios": "^1.1.3",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4"
   }
 }
