--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.25",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.8",
+    "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
@@ -23,6 +24,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
