--- a/client-app/package.json
+++ b/client-app/package.json
@@ -36,8 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postbuild": "mv build ../API/wwwroot",
+    "build": "BUILD_PATH='../API/wwwroot' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
